<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/textView_tital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/list_view_tital"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3.5" >

        <EditText
            android:id="@+id/editText_add_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/btnrectangel"
            android:ems="10"
            android:hint="@string/add_item"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:minHeight="40dp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/add_btn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3.5" >

        <Spinner
            android:id="@+id/spinnerCat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:contentDescription="Categorias"
            android:entries="@array/exp_cat" />

        <Button
            android:id="@+id/btnDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="Data" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_view_strik_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/rectangel"
        android:padding="1.5dp"
        android:scrollbars="none" >

    </ListView>

</LinearLayout>